--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask==2.3.2
-Flask-WTF==1.0.1
-WTForms==3.0.1
-Flask-SQLAlchemy==3.0.0
-Flask-Migrate==3.1.0
-SQLAlchemy==2.0.14
-gunicorn
+flask==2.1.1
+flask_sqlalchemy==2.5.1
+flask_migrate==3.1.0
+flask_wtf==1.0.0
+gunicorn==20.1.0
 werkzeug==2.0.3
